# media-capture

./: .clang-format  CMakeLists.txt  compile_commands.json  run.sh
.cache/clangd/index/: main.cpp.CE9C3CECB895C566.idx
src/: main.cpp
